[gd_scene load_steps=7 format=2]

[ext_resource path="res://fonts/Gotu/Gotu-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://scripts/Settings.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 40
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 24
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 24
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
size = 18
font_data = ExtResource( 1 )

[node name="Settings" type="Node2D"]
script = ExtResource( 2 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]
scale = Vector2( 0.333, 0.333 )
transform = Transform2D( 0.333, 0, 0, 0.333, 0, 0 )

[node name="Panel" type="Panel" parent="CanvasLayer"]
margin_right = 1024.0
margin_bottom = 600.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Panel"]
margin_top = 50.0
margin_right = 1024.0
margin_bottom = 600.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SettingsTitle" type="Label" parent="CanvasLayer/Panel/VBoxContainer"]
margin_right = 1024.0
margin_bottom = 67.0
custom_fonts/font = SubResource( 1 )
text = "Opciones"
align = 1

[node name="SettingsNames" type="VBoxContainer" parent="CanvasLayer/Panel"]
margin_left = 330.0
margin_top = 200.0
margin_right = 492.0
margin_bottom = 302.0
size_flags_horizontal = 5
custom_constants/separation = 20
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Music" type="Label" parent="CanvasLayer/Panel/SettingsNames"]
margin_right = 162.0
margin_bottom = 41.0
custom_fonts/font = SubResource( 2 )
text = "Musica"
align = 2

[node name="SoundEffects" type="Label" parent="CanvasLayer/Panel/SettingsNames"]
margin_top = 61.0
margin_right = 162.0
margin_bottom = 102.0
custom_fonts/font = SubResource( 3 )
text = "Sonidos"
align = 2

[node name="SettingsValues" type="VBoxContainer" parent="CanvasLayer/Panel"]
margin_left = 532.0
margin_top = 200.0
margin_right = 608.0
margin_bottom = 284.0
custom_constants/separation = 21
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Music" type="CheckButton" parent="CanvasLayer/Panel/SettingsValues" groups=[
"SettingsButtons",
]]
margin_right = 76.0
margin_bottom = 40.0
focus_mode = 0
enabled_focus_mode = 0

[node name="SoundEffects" type="CheckButton" parent="CanvasLayer/Panel/SettingsValues" groups=[
"SettingsButtons",
]]
margin_top = 61.0
margin_right = 76.0
margin_bottom = 101.0
focus_mode = 0
enabled_focus_mode = 0

[node name="BackToMenu" type="Button" parent="CanvasLayer/Panel"]
margin_left = 35.0
margin_top = 530.0
margin_right = 215.0
margin_bottom = 567.0
custom_fonts/font = SubResource( 4 )
text = "Al Men√∫ Principal"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="CanvasLayer/Panel/SettingsValues/Music" to="." method="_on_Music_pressed"]
[connection signal="pressed" from="CanvasLayer/Panel/SettingsValues/SoundEffects" to="." method="_on_SoundEffects_pressed"]
[connection signal="pressed" from="CanvasLayer/Panel/BackToMenu" to="." method="_on_BackToMenu_pressed"]
